; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_open_target_process.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_open_target_process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.game_capture = type { i32, i32, i64, i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@PROCESS_QUERY_INFORMATION = common dso_local global i32 0, align 4
@SYNCHRONIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"could not open process: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.game_capture*)* @open_target_process to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @open_target_process(%struct.game_capture* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.game_capture*, align 8
  store %struct.game_capture* %0, %struct.game_capture** %3, align 8
  %4 = load i32, i32* @PROCESS_QUERY_INFORMATION, align 4
  %5 = load i32, i32* @SYNCHRONIZE, align 4
  %6 = or i32 %4, %5
  %7 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %8 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %7, i32 0, i32 5
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @open_process(i32 %6, i32 0, i32 %9)
  %11 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %12 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 8
  %13 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %14 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %23, label %17

17:                                               ; preds = %1
  %18 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %19 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %18, i32 0, i32 4
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @warn(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %21)
  store i32 0, i32* %2, align 4
  br label %48

23:                                               ; preds = %1
  %24 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %25 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @is_64bit_process(i32 %26)
  %28 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %29 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %28, i32 0, i32 3
  store i32 %27, i32* %29, align 8
  %30 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %31 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = call i64 @is_app(i32 %32)
  %34 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %35 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %34, i32 0, i32 2
  store i64 %33, i64* %35, align 8
  %36 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %37 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %36, i32 0, i32 2
  %38 = load i64, i64* %37, align 8
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %47

40:                                               ; preds = %23
  %41 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %42 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = call i32 @get_app_sid(i32 %43)
  %45 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %46 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %45, i32 0, i32 1
  store i32 %44, i32* %46, align 4
  br label %47

47:                                               ; preds = %40, %23
  store i32 1, i32* %2, align 4
  br label %48

48:                                               ; preds = %47, %17
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i32 @open_process(i32, i32, i32) #1

declare dso_local i32 @warn(i8*, i32) #1

declare dso_local i32 @is_64bit_process(i32) #1

declare dso_local i64 @is_app(i32) #1

declare dso_local i32 @get_app_sid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
